# Agent-Memory

./: .env.example  .gitignore  MEMORY_SYSTEM.md  README.md  agent-memory-sharing-45min.md  agent-memory-sharing-past-as-code.md  memory-agent-demo-design.md  past-as-code-audience.md  pyproject.toml  笔记.md
memory_lab/: __init__.py
src/memory_lab/: __init__.py  agent.py  causal.py  cli.py  config.py  events.py  metrics.py  model_client.py  schemas.py
src/memory_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/memory_lab/environment/: __init__.py  demo_project.py
src/memory_lab/memory/: __init__.py  base.py  embeddings.py  governed.py  manager.py  naive.py  none.py  store.py  writer.py
src/memory_lab/scenarios/: __init__.py  learn_from_failure.py  memory_injection.py
tests/: test_admission.py  test_autonomous_and_causal.py  test_config.py  test_deepseek_client.py  test_environment.py  test_memory_manager.py  test_scenarios.py
