[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-lab"
version = "0.1.0"
description = "A deterministic lab for comparing Agent Memory strategies"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "typer>=0.12",
  "rich>=13.0",
]

[project.scripts]
memory-lab = "memory_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
